# clang-tool-example

./: CMakeLists.txt  ToolTemplate.cpp
cmake/: .FindClang.cmake.swp  FindLLVM.cmake
